syntax = "proto3";

package grpc.serving.predict;
option go_package = "github.com/sdual/mlserving/proto/grpc/serving/predict";

service PredictService {
  rpc Predict(PredictRequest) returns (PredictResponse) {}
}

message PredictRequest {
  string request_id = 1;
  repeated Feature features = 2;

  message Feature {
    repeated string categorical_features = 2;
    repeated double numerical_features = 3;
  }
}

message PredictResponse {
  string request_id = 1;
  repeated float predictions = 2;
}
